[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "liger_kernel"
version = "0.6.2"
description = "Efficient Triton kernels for LLM Training"
urls = { "Homepage" = "https://github.com/linkedin/Liger-Kernel" }
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["liger_kernel*"]
namespaces = false

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
asyncio_mode = "auto"

addopts = [
    "-n", "auto",                     # pytest-xdist: parallel tests on all CPUs
    "--dist=loadscope",               # group tests by module/class
    "--cov=liger_kernel",             # ✅ track the package name, not src path
    "--cov-report=term-missing",      # show missing lines in terminal
    "--cov-report=html",              # generate HTML report
    "--cov-config=pyproject.toml",
    "--durations=0"                   # show slowest tests
]

python_files = "test_*.py"
testpaths = ["test/"]


[tool.coverage.run]
source = ["liger_kernel"]             

[tool.coverage.report]
omit = ["test/*"]
show_missing = true
skip_covered = false


[tool.ruff]
line-length = 120
target-version = "py310"
respect-gitignore = true
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
]
ignore = ["E501", "B006", "E731", "A002", "E203"]

exclude = [
    ".git",
    "__pycache__",
    "benchmark_internal/others",
    ".venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["liger_kernel"]
force-single-line = true
lines-between-types = 1
